--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
         android:id="@+id/rvToDoItems"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="5dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -32,10 +32,11 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_background"
             android:text="@string/addText"
-            android:layout_marginEnd="5dp"
-            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
+            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
             app:layout_constraintTop_toTopOf="@id/constraintLayout"
-            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"/>
+            tools:layout_editor_absoluteX="309dp"
+            app:layout_constraintRight_toRightOf="@id/constraintLayout"
+            android:layout_marginEnd="8dp" />
 
         <EditText
             android:id="@+id/etToDoTitle"
@@ -48,6 +49,7 @@
             app:layout_constraintStart_toStartOf="@+id/constraintLayout"
             app:layout_constraintTop_toTopOf="@id/constraintLayout"
             app:layout_constraintBottom_toBottomOf="@id/constraintLayout"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
