--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -12,15 +12,30 @@
     android:padding="15dp"
     android:paddingStart="8dp">
 
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:text="x"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:background="@drawable/x_button_not_checked"
+        app:layout_constraintBottom_toBottomOf="@id/view_back"
+        app:layout_constraintLeft_toLeftOf="@id/view_back"
+        app:layout_constraintTop_toTopOf="@id/view_back" />
+
+
     <TextView
         android:id="@+id/tvToDoTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Example"
         android:textSize="24sp"
+        android:layout_marginStart="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cbDone"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnDelete"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
