--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ToDoLists" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.ToDoLists" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">#000000</item>
@@ -9,8 +9,10 @@
         <item name="colorSecondary">#5C5C5C</item>
         <item name="colorSecondaryVariant">#4A4A4A</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="titleTextColor">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
