--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,23 @@
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/tvNoRecords"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No To-Do's"
+        android:textSize="25sp"
+        android:textStyle="italic"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rvToDoItems"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -32,11 +48,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_background"
             android:text="@string/addText"
-            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
-            app:layout_constraintTop_toTopOf="@id/constraintLayout"
-            tools:layout_editor_absoluteX="309dp"
+            app:layout_constraintBottom_toBottomOf="@+id/etToDoTitle"
             app:layout_constraintRight_toRightOf="@id/constraintLayout"
-            android:layout_marginEnd="8dp" />
+            app:layout_constraintTop_toTopOf="@+id/etToDoTitle" />
 
         <EditText
             android:id="@+id/etToDoTitle"
